--- a/app/page.module.css
+++ b/app/page.module.css
@@ -16,7 +16,7 @@ UPenn Colors:
   align-items: center;
   padding: 1rem;
   width: 100%;
-  max-height: 50rem;
+  height: 150px;
 }
 
 .description {
