--- a/app/page.module.css
+++ b/app/page.module.css
@@ -14,9 +14,6 @@ UPenn Colors:
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
-  width: 100%;
-  height: 150px;
 }
 
 .description {
@@ -24,8 +21,8 @@ UPenn Colors:
   justify-content: inherit;
   align-items: inherit;
   font-size: 0.85rem;
-  max-width: var(--max-width);
   width: 100%;
+  max-height: 150px;
   z-index: 2;
   font-family: var(--font-mono);
   background-color: #333333;
