--- a/app/page.module.css
+++ b/app/page.module.css
@@ -22,7 +22,7 @@ UPenn Colors:
   align-items: inherit;
   font-size: 0.85rem;
   width: 100%;
-  max-height: 150px;
+  height: 150px;
   z-index: 2;
   font-family: var(--font-mono);
   background-color: #333333;
