--- a/app/page.module.css
+++ b/app/page.module.css
@@ -50,10 +50,13 @@ UPenn Colors:
 }
 
 .grid {
+  position: fixed;
   display: grid;
   grid-template-columns: repeat(4, minmax(25%, auto));
   width: var(--max-width);
   max-width: 100%;
+  height: 10%;
+  bottom:0;
 }
 
 .card {
