--- a/app/globals.css
+++ b/app/globals.css
@@ -48,6 +48,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+    background-repeat: no-repeat;
 }
 
 a {
