--- a/app/page.module.css
+++ b/app/page.module.css
@@ -55,7 +55,7 @@ UPenn Colors:
   grid-template-columns: repeat(4, minmax(25%, auto));
   width: var(--max-width);
   max-width: 100%;
-  height: 10%;
+  height: 150px;
   bottom:0;
 }
 
