Changed flex direction and justify-content

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -11,7 +11,8 @@ UPenn Colors:
 
 .main {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: flex-end;
   align-items: center;
 }
 
