--- a/app/page.module.css
+++ b/app/page.module.css
@@ -11,8 +11,8 @@ UPenn Colors:
 
 .main {
   display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
 }
 
