--- a/app/page.module.css
+++ b/app/page.module.css
@@ -10,7 +10,7 @@ UPenn Colors:
 */
 
 .main {
-  height:200px;
+  height:auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -55,7 +55,7 @@ UPenn Colors:
   grid-template-columns: repeat(4, minmax(25%, auto));
   width: var(--max-width);
   max-width: 100%;
-  max-height: 75px;
+  max-height: 100px;
 }
 
 .card {
