--- a/app/page.module.css
+++ b/app/page.module.css
@@ -8,20 +8,19 @@ UPenn Colors:
 #CCCCCC Light Gray
 #4A0042 Purple
 */
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap");
 
 .main {
-  height:auto;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  font-family: 'EB Garamond', serif;
+  font-family: "EB Garamond", serif;
 }
 
 .description {
-  background-color: #011F5B;
+  background-color: #011f5b;
   display: flex;
   flex-direction: row;
   justify-content: inherit;
@@ -30,11 +29,11 @@ UPenn Colors:
   width: 100%;
   height: 100px;
   z-index: 2;
-  font-family: 'EB Garamond', serif;
+  font-family: "EB Garamond", serif;
 }
 
 .nav-link {
-  color: #CCCCCC !important;
+  color: #cccccc !important;
 }
 
 .description a {
@@ -55,7 +54,7 @@ UPenn Colors:
 
 .code {
   font-weight: 700;
-  font-family: 'EB Garamond', serif;
+  font-family: "EB Garamond", serif;
 }
 
 .grid {
@@ -69,10 +68,9 @@ UPenn Colors:
 .overlay {
   backdrop-filter: blur(5px);
   position: fixed;
-  top:50%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-
 }
 
 .link {
@@ -82,13 +80,13 @@ UPenn Colors:
 }
 
 .rightAlignButton {
-  float: right;
+  text-align: right;
 }
 
 .container {
   display: flex;
   height: 100%;
-  width: 100%
+  width: 100%;
 }
 
 .leftpane {
@@ -97,7 +95,6 @@ UPenn Colors:
   width: 350px;
   /* Adjust the width as needed */
 }
-
 
 .rightpane {
   flex: 1 1 auto;
@@ -134,7 +131,7 @@ UPenn Colors:
   padding: 8px;
   border: 1px solid #000000;
   /* Adjust the margin between child containers as needed */
-  height:235px;
+  height: 235px;
   overflow-y: auto;
 }
 
@@ -144,9 +141,9 @@ UPenn Colors:
 }
 
 .centerText {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .borderBox {
@@ -157,7 +154,7 @@ UPenn Colors:
 }
 
 .profile {
-  align-items:flex-end;
+  align-items: flex-end;
 }
 
 .card {
@@ -166,7 +163,7 @@ UPenn Colors:
   background: rgba(var(--card-rgb), 0);
   border: 1px solid rgba(var(--card-border-rgb), 0);
   transition: background 200ms, border 200ms;
-  background-color: #CCCCCC;
+  background-color: #cccccc;
   display: flex;
   flex-direction: column;
 }
@@ -186,7 +183,7 @@ UPenn Colors:
   opacity: 0.6;
   font-size: 0.9rem;
   line-height: 1.5;
-  font-family: 'EB Garamond', serif;
+  font-family: "EB Garamond", serif;
 }
 
 .center {
@@ -214,7 +211,7 @@ UPenn Colors:
 
 .center::before,
 .center::after {
-  content: '';
+  content: "";
   left: 50%;
   position: absolute;
   filter: blur(45px);
