--- a/app/topNavBar.css
+++ b/app/topNavBar.css
@@ -14,7 +14,7 @@
     flex-direction: row;
     justify-content: inherit;
     align-items: inherit;
-    font-size: 0.85rem;
+    font-size: 1.25rem;
     width: 100%;
     height: 100px;
     z-index: 2;
@@ -23,6 +23,10 @@
 }
 
 .nav-link {
+    color: #CCCCCC !important;
+}
+
+.notification {
     color: #CCCCCC !important;
 }
 
